rename grafana ocp directory

--- a/resources/observability/grafana/grafana-dashboards.configmap.yaml
+++ b/resources/observability/grafana/grafana-dashboards.configmap.yaml
@@ -167,6 +167,15 @@ data:
                 "type": "file"
             },
             {
+                "folder": "OCP",
+                "name": "OCP",
+                "options": {
+                    "path": "/grafana-dashboard-definitions/OCP"
+                },
+                "orgId": 1,
+                "type": "file"
+            },
+            {
                 "folder": "MAS-SSO",
                 "name": "MAS SSO",
                 "options": {
@@ -225,15 +234,6 @@ data:
                 "name": "WebRCA",
                 "options": {
                     "path": "/grafana-dashboard-definitions/WebRCA"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "OCP-SLOs",
-                "name": "OCP SLOs",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/OCP-SLOs"
                 },
                 "orgId": 1,
                 "type": "file"
