generalize repo name

--- a/data/teams/sig-sre/cicd/saas-osd-ocp-dashboards.yaml
+++ b/data/teams/sig-sre/cicd/saas-osd-ocp-dashboards.yaml
@@ -3,7 +3,7 @@ $schema: /app-sre/saas-file-2.yml
 
 labels: {}
 
-name: saas-ocp-slo-dashboards
+name: saas-osd-ocp-dashboards
 description: 'SaaS tracking file for App-interface'
 
 app:
@@ -23,8 +23,8 @@ managedResourceTypes:
 imagePatterns: []
 
 resourceTemplates:
-- name: ocp-slo-dashboards
-  url: https://gitlab.cee.redhat.com/service/ocp-slo-dashboards
+- name: osd-ocp-dashboards
+  url: https://gitlab.cee.redhat.com/service/osd-ocp-dashboards
   path: /dashboards
   provider: directory
   targets:
