remove dashboards from app-interface

--- a/resources/observability/grafana/grafana-dashboards.configmap.yaml
+++ b/resources/observability/grafana/grafana-dashboards.configmap.yaml
@@ -1,247 +1,1 @@
-apiVersion: v1
-data:
-  dashboards.yaml: |-
-    {
-        "apiVersion": 1,
-        "providers": [
-            {
-                "folder": "",
-                "name": "0",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/0"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "AppSRE",
-                "name": "AppSRE",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/AppSRE"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Hive",
-                "name": "Hive",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Hive"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Image-Builder",
-                "name": "Image-Builder",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Image-Builder"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Insights",
-                "name": "Insights",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Insights"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Kubernetesv3",
-                "name": "Kubernetes (v3)",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Kubernetesv3"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Kubernetes",
-                "name": "Kubernetes",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Kubernetes"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Observatorium",
-                "name": "Observatorium",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Observatorium"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Cincinnati",
-                "name": "Cincinnati",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Cincinnati"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "OCM",
-                "name": "OCM",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/OCM"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "OSIO",
-                "name": "OSIO",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/OSIO"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Quay",
-                "name": "Quay",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Quay"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Clair",
-                "name": "Clair",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Clair"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Assisted-Installer",
-                "name": "Assisted-Installer",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/AssistedInstaller"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "SD-CICD",
-                "name": "SD-CICD",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/SD-CICD"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "RHOSAK",
-                "name": "RHOSAK",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/RHOSAK"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Devfile-Registry",
-                "name": "Devfile-Registry",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Devfile-Registry"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "OSD",
-                "name": "OSD",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/OSD"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "OCP",
-                "name": "OCP",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/OCP"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "MAS-SSO",
-                "name": "MAS SSO",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/SSO-MAS"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "BackPlane",
-                "name": "BackPlane",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/BackPlane"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "OCM-Quay",
-                "name": "OCM-Quay",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/OCM-Quay"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "ServiceRegistry",
-                "name": "ServiceRegistry",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/ServiceRegistry"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "Sendgrid",
-                "name": "Sendgrid",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/Sendgrid"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "StatusBoard",
-                "name": "StatusBoard",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/StatusBoard"
-                },
-                "orgId": 1,
-                "type": "file"
-            },
-            {
-                "folder": "WebRCA",
-                "name": "WebRCA",
-                "options": {
-                    "path": "/grafana-dashboard-definitions/WebRCA"
-                },
-                "orgId": 1,
-                "type": "file"
-            }
-        ]
-    }
-kind: ConfigMap
-metadata:
-  name: grafana-dashboards
-  annotations:
-    qontract.recycle: "true"
+# moved to https://gitlab.cee.redhat.com/service/osd-ocp-dashboards
