Change to InProgress

--- a/data/services/managed-connectors/app.yaml
+++ b/data/services/managed-connectors/app.yaml
@@ -9,7 +9,7 @@ name: cos-fleet-manager
 description: |
   A service for provisioning and managing fleets of connector instances.
 
-onboardingStatus: Proposed
+onboardingStatus: InProgress
 
 serviceOwners:
   - name: Managed Connector Services Team
