--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -64,10 +64,9 @@ resourceTemplates:
       $ref: /services/quayio/namespaces/quays02ue1.yml
     ref: 1f8225c897a7f7545e4a93e82bc67c6fee9eb31b # need to update this
     parameters:
-      JOB_NAME: "create-database-user-2022-01-19"
+      JOB_NAME: "create-database-user-2022-01-20"
       ACTIVE_DEADLINE_SECONDS: "600"
       DB_HOST_SECRET: "quayio-stage-57-py3-rds"
       DB_CREDS_SECRET: "quayio-stage-57-py3-rds"
       SUBCOMMAND: "create_database_user"
-      NEW_DB_USER: "quay-db-jobs-config"
-      NEW_DB_USER_PASSWORD: "quay-db-jobs-config"
+      NEW_DB_USER_CREDS_SECRET: "quay-db-jobs-config"
