--- a/data/openshift/hshifti01ue1/cluster.yml
+++ b/data/openshift/hshifti01ue1/cluster.yml
@@ -79,3 +79,6 @@ awsInfrastructureAccess:
 - awsGroup:
     $ref: /aws/app-sre/groups/App-SRE-admin.yml
   accessLevel: network-mgmt
+managedClusterRoles: true
+observabilityNamespace:
+  $ref: /services/observability/namespaces/openshift-customer-monitoring.hshifti01ue1.yml
