--- a/data/services/app-sre/cicd/ci-int/saas-openshift-acme.yaml
+++ b/data/services/app-sre/cicd/ci-int/saas-openshift-acme.yaml
@@ -326,3 +326,6 @@ resourceTemplates:
   - namespace:
       $ref: /openshift/appsrep06ue2/namespaces/app-sre-observability-per-cluster.yml
     ref: d52fc8f622ce0b59c943eab021ad2538d5a3097d
+  - namespace:
+      $ref: /openshift/hshifti01ue1/namespaces/app-sre-observability-per-cluster.yml
+    ref: master
