--- a/data/services/observability/cicd/saas/saas-observability-per-cluster.yaml
+++ b/data/services/observability/cicd/saas/saas-observability-per-cluster.yaml
@@ -331,6 +331,13 @@ resourceTemplates:
       EXTERNAL_URL: https://prometheus.appsrep06ue2.devshift.net
     ref: 0fabacc431fd54af443a39ddc49f5118893322e5
 # Alertmanager
+  - namespace:
+      $ref: /services/observability/namespaces/openshift-customer-monitoring.hshifti01ue1.yml
+    parameters:
+      CLUSTER_LABEL: hshifti01ue1
+      ENVIRONMENT: integration
+      EXTERNAL_URL: https://prometheus.hshifti01ue1.devshift.net
+    ref: 0fabacc431fd54af443a39ddc49f5118893322e5
 - name: alertmanager
   path: /openshift/alertmanager.template.yaml
   url: https://gitlab.cee.redhat.com/service/app-sre-observability
@@ -542,4 +549,10 @@ resourceTemplates:
     parameters:
       ENVIRONMENT: production
       EXTERNAL_URL: https://alertmanager.appsrep06ue2.devshift.net
+    ref: 452840a662c272e2e1bcba22e221683468a7467a
+  - namespace:
+      $ref: /services/observability/namespaces/openshift-customer-monitoring.hshifti01ue1.yml
+    parameters:
+      ENVIRONMENT: integration
+      EXTERNAL_URL: https://alertmanager.hshifti01ue1.devshift.net
     ref: 452840a662c272e2e1bcba22e221683468a7467a
