--- a/data/services/observability/roles/app-sre-osdv4-monitored-clusters-view.yml
+++ b/data/services/observability/roles/app-sre-osdv4-monitored-clusters-view.yml
@@ -110,3 +110,6 @@ access:
 - cluster:
     $ref: /openshift/appsrep06ue2/cluster.yml
   clusterRole: cluster-monitoring-view
+- cluster:
+    $ref: /openshift/hshifti01ue1/cluster.yml
+  clusterRole: cluster-monitoring-view
