--- a/resources/observability/grafana/grafana-datasources.secret.yaml
+++ b/resources/observability/grafana/grafana-datasources.secret.yaml
@@ -523,6 +523,37 @@ data:
                 "access": "proxy",
                 "editable": false,
                 "jsonData": {
+                    "tlsSkipVerify": true,
+                    "httpHeaderName1": "Authorization"
+                },
+                "name": "hshifti01ue1-prometheus",
+                "orgId": 1,
+                "secureJsonData": {
+                    "httpHeaderValue1": "Bearer {{{ vault('app-sre/creds/kube-configs/hshifti01ue1', 'token') }}}"
+                },
+                "type": "prometheus",
+                "url": "https://prometheus.hshifti01ue1.devshift.net",
+                "version": 1
+            },
+            {
+                "access": "proxy",
+                "editable": false,
+                "jsonData": {
+                    "httpHeaderName1": "Authorization"
+                },
+                "name": "hshifti01ue1-cluster-prometheus",
+                "orgId": 1,
+                "secureJsonData": {
+                    "httpHeaderValue1": "Bearer {{{ vault('app-sre/creds/kube-configs/hshifti01ue1', 'token') }}}"
+                },
+                "type": "prometheus",
+                "url": "https://prometheus-k8s-openshift-monitoring.apps.hshifti01ue1.bjee.p1.openshiftapps.com",
+                "version": 1
+            },
+            {
+                "access": "proxy",
+                "editable": false,
+                "jsonData": {
                     "httpHeaderName1": "Authorization"
                 },
                 "name": "crcs02ue1-prometheus",
