add saas file owners

--- a/data/services/openshift.io/roles/devtools-ci-admin.yml
+++ b/data/services/openshift.io/roles/devtools-ci-admin.yml
@@ -8,3 +8,6 @@ name: dsaas-dev
 
 permissions:
 - $ref: /dependencies/vault/permissions/devtools-osio-admin.yml
+
+owned_saas_files:
+- $ref: /services/openshift.io/cicd/saas/saas-redirector.yaml
