Increase cyndi init validation time in stage

--- a/data/services/insights/xjoin/deploy-cyndi.yml
+++ b/data/services/insights/xjoin/deploy-cyndi.yml
@@ -70,6 +70,7 @@ resourceTemplates:
       SSL_MODE: require
       SOURCE_NAMESPACE: xjoin-stage
       TARGET_NAMESPACE: xjoin-stage
+      VALIDATION_ATTEMPTS_THRESHOLD_INIT: "60"
   - namespace:
       $ref: /services/insights/xjoin/namespaces/cyndi-fedramp-stage.yml
     ref: master
