Add redis 6 for builders in quay.io production

--- a/data/services/quayio/namespaces/quayp05ue1.yml
+++ b/data/services/quayio/namespaces/quayp05ue1.yml
@@ -187,6 +187,11 @@ terraformResources:
   output_resource_name: quayio-elasticache
 - provider: elasticache
   account: quayio-prod
+  identifier: quayio-production-builders
+  defaults: /terraform/resources/quayio-production/elasticache-builders-1.yml
+  parameter_group: /terraform/resources/quayio-production/elasticache-builders-parameter-group-1.yml
+- provider: elasticache
+  account: quayio-prod
   identifier: quayio-production-modelcache
   defaults: /terraform/resources/quayio-production/elasticache-modelcache-1.yml
   parameter_group: /terraform/resources/quayio-production/elasticache-modelcache-parameter-group-1.yml
