--- a/resources/quayio-stage/quay/quay-service-tool-config.secret.yaml
+++ b/resources/quayio-stage/quay/quay-service-tool-config.secret.yaml
@@ -12,6 +12,7 @@ data:
       url: {{{ vault('app-interface/quayio-stage/quayio-stage/quay-service-tool-config', 'authentication.url', '{{ vault_secret_version }}') }}}
       realm: {{{ vault('app-interface/quayio-stage/quayio-stage/quay-service-tool-config', 'authentication.realm', '{{ vault_secret_version }}') }}}
       clientid: {{{ vault('app-interface/quayio-stage/quayio-stage/quay-service-tool-config', 'authentication.clientid', '{{ vault_secret_version }}') }}}
+      role: {{{ vault('app-interface/quayio-stage/quayio-stage/quay-service-tool-config', 'authentication.role', '{{ vault_secret_version }}') }}}
     db:
       host: {{{ vault('app-sre/integrations-output/terraform-resources/quays02ue1/quay/quayio-stage-57-py3-rds', 'db.host') }}}
       user: {{{ vault('app-sre/integrations-output/terraform-resources/quays02ue1/quay/quayio-stage-57-py3-rds', 'db.user') }}}
