--- a/data/services/quayio/saas/quayio-utils.yaml
+++ b/data/services/quayio/saas/quayio-utils.yaml
@@ -49,7 +49,7 @@ resourceTemplates:
   targets:
   - namespace:
       $ref: /services/quayio/namespaces/quays02ue1.yml
-    ref: b1780a0b5c204dbd43e9d21e4e6deea7a14a1834
+    ref: b1780a0b5c204dbd43e9d21e4e6deea7a14a1834 #need to update this
     parameters:
       QUAY_SEVICE_TOOL_CONFIG_SECRET: "quay-service-tool-config"
       IMAGE: "quay.io/app-sre/quay-service-tool"
