hshifti01ue1: fix openshift-customer-monitoring NS jiralert_host:jiralert.app-sre-stage.devshift.net (not staging)

--- a/data/services/observability/namespaces/openshift-customer-monitoring.hshifti01ue1.yml
+++ b/data/services/observability/namespaces/openshift-customer-monitoring.hshifti01ue1.yml
@@ -51,9 +51,9 @@ openshiftResources:
   type: extracurlyjinja2
   path: /observability/alertmanager/alertmanager-instance.secret.yaml
   validate_alertmanager_config: true
-  # Replace PHASE with app-sre for production and app-sre-staging for staging
+  # Replace PHASE with app-sre for production and app-sre-stage for staging
   variables:
-    jiralert_host: jiralert.app-sre-staging.devshift.net
+    jiralert_host: jiralert.app-sre-stage.devshift.net
 
 ## Servicemonitors
 ### All managed Prometheus Operators
