--- a/resources/services/assisted-installer/leader-election.role.yaml
+++ b/resources/services/assisted-installer/leader-election.role.yaml
@@ -1,27 +1,23 @@
-apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: leader-election
 rules:
-- apiGroups:
-  - ''
-  - coordination.k8s.io
-  resources:
-     - configmaps
-     - leases
-  verbs:
-    - create
-- apiGroups:
-    - ''
-    - coordination.k8s.io
-  resources:
-    - configmaps
-    - leases
-  verbs:
-    - get
-    - update
-    - delete
-  resourceNames:
-    - assisted-service-baseiso-helper
-    - assisted-service-leader-election-helper
-    - assisted-service-migration-helper
+  - verbs:
+      - create
+    apiGroups:
+      - ''
+    resources:
+      - configmaps
+  - verbs:
+      - get
+      - update
+      - delete
+    apiGroups:
+      - ''
+    resources:
+      - configmaps
+    resourceNames:
+      - assisted-service-baseiso-helper
+      - assisted-service-leader-election-helper
+      - assisted-service-migration-helper
