# Changelog:  ## policies-engine changelog on stage: * [:link:](https://github.com/RedHatInsights/policies-engine/commit/7e696142cb72cf7ee51b7485379fd665700fa09b) POL-621 Log Kafka config values (#313)

--- a/data/services/insights/policies/deploy-clowder.yml
+++ b/data/services/insights/policies/deploy-clowder.yml
@@ -80,10 +80,10 @@ resourceTemplates:
   - namespace:
       $ref: /services/insights/policies/namespaces/policies-fedramp-stage.yml
     # policies-engine commit hash that determines the clowdapp.yaml version
-    ref: 0c9a3555fc3e2bb40af21f6ac282399e8a3c66d8
+    ref: 7e696142cb72cf7ee51b7485379fd665700fa09b
     parameters:
       # quay.io tag that will be deployed
-      IMAGE_TAG: 0c9a355
+      IMAGE_TAG: '7e69614'
       CLOUDWATCH_ENABLED: true
       INFINISPAN_STORAGE: 200Gi
       MEMORY_LIMIT: 5Gi
