# Changelog:  ## policies-engine changelog on stage: * [:link:](https://github.com/RedHatInsights/policies-engine/commit/fbfd1e38eb5f26cfc4e0263213eb3063f02a7631) POL-621 Add missing Kafka SASL config value (#314)

--- a/data/services/insights/policies/deploy-clowder.yml
+++ b/data/services/insights/policies/deploy-clowder.yml
@@ -80,10 +80,10 @@ resourceTemplates:
   - namespace:
       $ref: /services/insights/policies/namespaces/policies-fedramp-stage.yml
     # policies-engine commit hash that determines the clowdapp.yaml version
-    ref: 7e696142cb72cf7ee51b7485379fd665700fa09b
+    ref: fbfd1e38eb5f26cfc4e0263213eb3063f02a7631
     parameters:
       # quay.io tag that will be deployed
-      IMAGE_TAG: '7e69614'
+      IMAGE_TAG: fbfd1e3
       CLOUDWATCH_ENABLED: true
       INFINISPAN_STORAGE: 200Gi
       MEMORY_LIMIT: 5Gi
