hshifti01ue1 clusterAdminAutomationToken

--- a/data/openshift/hshifti01ue1/cluster.yml
+++ b/data/openshift/hshifti01ue1/cluster.yml
@@ -61,6 +61,10 @@ automationToken:
   path: app-sre/creds/kube-configs/hshifti01ue1
   field: token
 
+clusterAdminAutomationToken:
+  path: app-sre/creds/kube-configs/hshifti01ue1-cluster-admin
+  field: token
+
 # machinePools: # optional, specify additional Machine Pools to be provisioned
 # - id: (machine pool name, should be unique per cluster)
 #   instance_type: (desired instance type. m5.xlarge for example)
