--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -50,6 +50,10 @@ resourceTemplates:
       DB_CREDS_SECRET: "quayio-stage-57-py3-rds"
       SUBCOMMAND: "enable_users"
       USERS: "weaveworks"
+#- name: quay-db-jobs-enable-weaveworks
+#  path: /openshift.yml
+#  url: https://github.com/quay/quay-db-jobs
+#  targets:
 #  - namespace:
 #      $ref: /services/quayio/namespaces/quayp05ue1.yml
 #    ref: 1f8225c897a7f7545e4a93e82bc67c6fee9eb31b
@@ -60,11 +64,15 @@ resourceTemplates:
 #      DB_CREDS_SECRET: "quay-db-config-secret"
 #      SUBCOMMAND: "enable_users"
 #      USERS: "weaveworks"
+- name: quay-db-jobs-create-database-user
+  path: /openshift.yml
+  url: https://github.com/quay/quay-db-jobs
+  targets:
   - namespace:
       $ref: /services/quayio/namespaces/quays02ue1.yml
     ref: 9ea58d12175b6622e9b9aaa5187016264c72e0be
     parameters:
-      JOB_NAME: "create-database-user-2022-01-20"
+      JOB_NAME: "create-database-user-2022-01-21"
       ACTIVE_DEADLINE_SECONDS: "600"
       DB_HOST_SECRET: "quayio-stage-57-py3-rds"
       DB_CREDS_SECRET: "quayio-stage-57-py3-rds"
