--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -20,6 +20,13 @@ slack:
 
 managedResourceTypes:
 - Job
+- ServiceAccount
+
+openshiftResources:
+  - provider: resource-template
+    path: /services/common/serviceaccount.yaml
+    variables:
+      name: <name>
 
 imagePatterns:
 - quay.io/app-sre/quay-db-jobs
