--- a/data/services/quayio/namespaces/quays02ue1.yml
+++ b/data/services/quayio/namespaces/quays02ue1.yml
@@ -32,6 +32,7 @@ managedResourceTypes:
 - ConfigMap
 - NetworkPolicy
 - Secret
+- ServiceAccount
 
 openshiftResources:
 - provider: vault-secret
@@ -46,6 +47,11 @@ openshiftResources:
   name: quayio-backup-image-pull-secret
   annotations:
     qontract.ignore_reconcile_time: "true"
+
+- provider: resource-template
+  path: /services/common/serviceaccount.yaml
+  variables:
+    name: <name>
 
 - provider: resource-template
   type: extracurlyjinja2
