Addung shared resources and name for service account

--- a/data/services/quayio/namespaces/quays02ue1.yml
+++ b/data/services/quayio/namespaces/quays02ue1.yml
@@ -28,6 +28,9 @@ openshiftServiceAccountTokens:
     $ref: /services/quayio/namespaces/quay-builder-stage.yml
   serviceAccountName: quay-builder-sa
 
+sharedResources:
+- $ref: /services/app-sre/shared-resources/quayio-pull-secret.yml
+
 managedResourceTypes:
 - ConfigMap
 - NetworkPolicy
@@ -51,7 +54,7 @@ openshiftResources:
 - provider: resource-template
   path: /services/common/serviceaccount.yaml
   variables:
-    name: <name>
+    name: quay-db-jobs-sa
 
 - provider: resource-template
   type: extracurlyjinja2
