--- a/data/teams/app-sre/schedules/app-sre-onboarding-ic.yml
+++ b/data/teams/app-sre/schedules/app-sre-onboarding-ic.yml
@@ -47,14 +47,14 @@ schedule:
   end: '2021-10-22 21:00'
   users:
   - $ref: /teams/app-sre/users/jchevret.yml
-- start: '2021-10-25 14:00'
-  end: '2021-10-25 21:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
-- start: '2021-10-26 14:00'
-  end: '2021-10-26 21:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2021-10-25 14:00'
+#   end: '2021-10-25 21:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2021-10-26 14:00'
+#   end: '2021-10-26 21:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
 - start: '2021-10-27 07:00'
   end: '2021-10-27 14:00'
   users:
@@ -155,26 +155,26 @@ schedule:
   end: '2021-11-30 15:00'
   users:
   - $ref: /teams/app-sre/users/lmunozme.yml
-- start: '2021-12-01 15:00'
-  end: '2021-12-01 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
-- start: '2021-12-02 15:00'
-  end: '2021-12-02 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
-- start: '2021-12-03 15:00'
-  end: '2021-12-03 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
-- start: '2021-12-06 15:00'
-  end: '2021-12-06 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
-- start: '2021-12-07 15:00'
-  end: '2021-12-07 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2021-12-01 15:00'
+#   end: '2021-12-01 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2021-12-02 15:00'
+#   end: '2021-12-02 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2021-12-03 15:00'
+#   end: '2021-12-03 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2021-12-06 15:00'
+#   end: '2021-12-06 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2021-12-07 15:00'
+#   end: '2021-12-07 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
 - start: '2021-12-08 08:00'
   end: '2021-12-08 15:00'
   users:
@@ -235,30 +235,30 @@ schedule:
   end: '2022-01-04 15:00'
   users:
   - $ref: /teams/app-sre/users/mafriedm.yml
-- start: '2022-01-05 15:00'
-  end: '2022-01-05 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2022-01-05 15:00'
+#   end: '2022-01-05 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
 - start: '2022-01-06 08:00'
   end: '2022-01-06 15:00'
   users:
   - $ref: /teams/app-sre/users/skryzhni.yml
-- start: '2022-01-07 15:00'
-  end: '2022-01-07 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
-- start: '2022-01-10 15:00'
-  end: '2022-01-10 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
-- start: '2022-01-11 15:00'
-  end: '2022-01-11 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
-- start: '2022-01-12 15:00'
-  end: '2022-01-12 22:00'
-  users:
-  - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2022-01-07 15:00'
+#   end: '2022-01-07 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2022-01-10 15:00'
+#   end: '2022-01-10 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2022-01-11 15:00'
+#   end: '2022-01-11 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
+# - start: '2022-01-12 15:00'
+#   end: '2022-01-12 22:00'
+#   users:
+#   - $ref: /teams/app-sre/users/rrati.yml
 - start: '2022-01-13 08:00'
   end: '2022-01-13 15:00'
   users:
