# Changelog:  ## policies-engine changelog on stage: * [:link:](https://github.com/RedHatInsights/policies-engine/commit/1064248e777495290bdacb359cacfbba82d72ae3) Bump clowder-quarkus-config-source from 0.5.2 to 0.5.3 * [:link:](https://github.com/RedHatInsights/policies-engine/commit/09e6724688fb28a3a9391af1c2ec85aa12106499) POL-621 Remove hardcoded Kafka SASL env var (#316)

--- a/data/services/insights/policies/deploy-clowder.yml
+++ b/data/services/insights/policies/deploy-clowder.yml
@@ -80,10 +80,10 @@ resourceTemplates:
   - namespace:
       $ref: /services/insights/policies/namespaces/policies-fedramp-stage.yml
     # policies-engine commit hash that determines the clowdapp.yaml version
-    ref: fbfd1e38eb5f26cfc4e0263213eb3063f02a7631
+    ref: 09e6724688fb28a3a9391af1c2ec85aa12106499
     parameters:
       # quay.io tag that will be deployed
-      IMAGE_TAG: fbfd1e3
+      IMAGE_TAG: '09e6724'
       CLOUDWATCH_ENABLED: true
       INFINISPAN_STORAGE: 200Gi
       MEMORY_LIMIT: 5Gi
