--- a/resources/jenkins/ci-centos/jobs.yaml
+++ b/resources/jenkins/ci-centos/jobs.yaml
@@ -35,14 +35,15 @@
             extra_target: rhel
         - '{ci_project}-{git_repo}-promote-to-prod':
             disabled: false
-            git_repo: saas-analytics
-            ci_project: 'devtools'
-        - '{ci_project}-{git_repo}-promote-to-prod':
-            disabled: false
             git_repo: saas-launchpad
             ci_project: 'devtools'
             saas_git: saas-launchpad
             prj_name: launchpad-production
+        # fabric8-analytics
+        - '{ci_project}-{git_repo}-promote-to-prod':
+            disabled: false
+            git_repo: saas-analytics
+            ci_project: 'devtools'
         - '{ci_project}-{git_repo}-fabric8-analytics':
             git_organization: fabric8-analytics
             git_repo: fabric8-analytics-pgbouncer
