Add missing secret for quay db jobs

--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -50,6 +50,7 @@ resourceTemplates:
       DB_CREDS_SECRET: "quayio-stage-57-py3-rds"
       SUBCOMMAND: "enable_users"
       USERS: "weaveworks"
+      NEW_DB_USER_CREDS_SECRET: "quay-db-jobs-config"
 #- name: quay-db-jobs-enable-weaveworks
 #  path: /openshift.yml
 #  url: https://github.com/quay/quay-db-jobs
